gcc-14.2.0/gcc/testsuite/gm2/iso/const/fail/testfloat.mod
version https://git-lfs.github.com/spec/v1
oid sha256:b4804b7c7beb9c057b78d8a63ecc83bb15e6c960334ee2f5b3fcfcaace6d80ab
size 91
